--- a/pricing.html
+++ b/pricing.html
@@ -4,8 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Talentree - Pricing</title>
-    <!-- TODO: Missing description -->
+    <meta
+        name="description"
+        content="Whether you are a five-person team or a thousand-person team,
+        we cater to your specific needs and team sizes. Pick a plan that
+        suited your requirements and needs the most"
+    />
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="./assets//favicon.png">
@@ -53,7 +59,7 @@
           <h1>Chose a Plan That Work For You</h1>
           <p>
             Whether you are a five-person team or a thousand-person team, we
-            cater to your specific needs and team sizes. PIck a plan that
+            cater to your specific needs and team sizes. Pick a plan that
             suited your requirements and needs the most.
           </p>
       </div>
@@ -229,5 +235,6 @@
     <script src="js/index.js"></script>
     <script src="js/parallax.js"></script>
     <script src="js/modal.js"></script>
+    <script src="js/newsletter.js"></script>
 </body>
 </html>
